--- a/WeatherSound/WeatherSound/DY.storyboard
+++ b/WeatherSound/WeatherSound/DY.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hrH-8r-Zwr">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,11 +20,11 @@
                         <viewControllerLayoutGuide type="bottom" id="EGp-S3-0Lh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="UMe-gj-Jy9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CHf-b1-ha6">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <color key="backgroundColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <segue destination="QTa-79-RnM" kind="embed" id="ghm-SZ-SIK"/>
@@ -34,15 +34,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="CHf-b1-ha6" secondAttribute="trailing" id="SGb-9l-d6d"/>
-                            <constraint firstItem="CHf-b1-ha6" firstAttribute="top" secondItem="gar-8u-fSH" secondAttribute="bottom" id="a6F-8e-CNU"/>
                             <constraint firstItem="EGp-S3-0Lh" firstAttribute="top" secondItem="CHf-b1-ha6" secondAttribute="bottom" id="nuf-RL-DQ0"/>
+                            <constraint firstItem="CHf-b1-ha6" firstAttribute="top" secondItem="UMe-gj-Jy9" secondAttribute="top" id="pho-Zw-7ri"/>
                             <constraint firstItem="CHf-b1-ha6" firstAttribute="leading" secondItem="UMe-gj-Jy9" secondAttribute="leading" id="vfY-7S-0Sj"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dGF-Wy-Igy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-158" y="124"/>
+            <point key="canvasLocation" x="-159.19999999999999" y="123.68815592203899"/>
         </scene>
         <!--MainView-->
         <scene sceneID="zqz-fb-yeH">
@@ -65,9 +65,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sIU-tj-dB9">
-                                <rect key="frame" x="-0.5" y="-0.5" width="375" height="647"/>
+                                <rect key="frame" x="-0.66666666666665719" y="-0.66666666666668561" width="375.33333333333337" height="647.33333333333326"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="oVE-9m-SC6">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="376" height="648"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 </view>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -84,13 +84,13 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gK9-E0-rek">
-                                <rect key="frame" x="37.5" y="85" width="300" height="300"/>
+                                <rect key="frame" x="37.666666666666657" y="85" width="300" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gK9-E0-rek" secondAttribute="height" multiplier="1:1" id="XyH-zG-WeE"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9Df-e2-ujT">
-                                <rect key="frame" x="37.5" y="521" width="300" height="24"/>
+                                <rect key="frame" x="37.666666666666657" y="520.66666666666663" width="300" height="24"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjo-Aq-s2g" userLabel="previousButton">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
@@ -119,16 +119,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nSj-3h-mYx">
-                                <rect key="frame" x="75" y="410" width="225" height="41"/>
+                                <rect key="frame" x="75" y="410" width="225" height="40.666666666666686"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="szq-aC-ReF" userLabel="SongTitleLB">
-                                        <rect key="frame" x="0.0" y="0.0" width="225" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="225" height="20.333333333333314"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="artist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uyf-T0-Upf" userLabel="artistLB">
-                                        <rect key="frame" x="0.0" y="20.5" width="225" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="20.333333333333314" width="225" height="20.333333333333371"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -136,7 +136,7 @@
                                 </subviews>
                             </stackView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="NWg-Nw-8De">
-                                <rect key="frame" x="35.5" y="471" width="304" height="31"/>
+                                <rect key="frame" x="35.666666666666657" y="470.66666666666669" width="304" height="31"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <action selector="playerProgressSliderValueChanged:" destination="JBu-AV-RGf" eventType="valueChanged" id="pQt-t1-SKa"/>
@@ -144,7 +144,7 @@
                                 </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11:11" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLF-7q-0F2">
-                                <rect key="frame" x="277.5" y="503" width="60" height="14.5"/>
+                                <rect key="frame" x="277.66666666666669" y="502.66666666666663" width="60" height="14.666666666666629"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="14" id="cM4-NJ-WDN"/>
                                 </constraints>
@@ -153,7 +153,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GHw-AS-0jj">
-                                <rect key="frame" x="37.5" y="503" width="60" height="14"/>
+                                <rect key="frame" x="37.666666666666671" y="502.66666666666663" width="60.000000000000014" height="13.999999999999886"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="14" id="zQ5-6s-L2Z"/>
                                 </constraints>
