--- a/WeatherSound/WeatherSound/MainView.storyboard
+++ b/WeatherSound/WeatherSound/MainView.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ThE-Sh-Mb3">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,7 +19,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="I4h-1w-MaP">
@@ -36,31 +36,23 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="nB8-rg-wyN">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="Krn-tE-IX6">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="NI6-cK-IrC">
-                                <rect key="frame" x="16" y="7" width="83" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="HOME">
-                                    <color key="titleColor" red="0.28820249438285828" green="0.25932019948959351" blue="0.27818804979324341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
-                        </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem style="plain" id="siG-Vh-EfE">
-                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YkI-eQ-8HQ">
-                                    <rect key="frame" x="276" y="7" width="83" height="30"/>
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YkI-eQ-8HQ">
+                                    <rect key="frame" x="311" y="7" width="83" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                     <state key="normal" title="MY">
                                         <color key="titleColor" red="0.28820249438285828" green="0.25932019948959351" blue="0.27818804979324341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
                                     <connections>
-                                        <segue destination="WRg-H2-3Pn" kind="show" id="7dI-gc-SKW"/>
+                                        <segue destination="WRg-H2-3Pn" kind="show" animates="NO" id="7dI-gc-SKW"/>
                                     </connections>
                                 </button>
                             </barButtonItem>
                             <barButtonItem style="plain" id="M0l-u6-9Ki">
-                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="acc-tn-Snp">
-                                    <rect key="frame" x="185" y="7" width="83" height="30"/>
+                                <button key="customView" hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="acc-tn-Snp">
+                                    <rect key="frame" x="220" y="7" width="83" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal" title="SHARE">
                                         <color key="titleColor" red="0.28820249438285828" green="0.25932019948959351" blue="0.27818804979324341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -88,7 +80,7 @@
                         <viewControllerLayoutGuide type="bottom" id="0FG-qc-hR4"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8Do-gS-wcj">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CXy-Ck-0hg">
@@ -106,12 +98,26 @@
                                             <state key="normal" title="내 리스트 &gt;"/>
                                             <connections>
                                                 <action selector="MyListButtonTouched:" destination="WRg-H2-3Pn" eventType="touchUpInside" id="X7S-xL-Hfa"/>
+                                                <segue destination="8gO-CN-NWw" kind="show" id="Ez9-gm-yP2"/>
                                             </connections>
                                         </button>
                                         <view clipsSubviews="YES" contentMode="center" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="evl-Ln-cct">
                                             <rect key="frame" x="-8" y="0.0" width="295" height="245"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="hotdog" translatesAutoresizingMaskIntoConstraints="NO" id="JUg-Vs-SFf">
+                                                    <rect key="frame" x="8" y="0.0" width="287" height="245"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bIf-l4-M60">
+                                                    <rect key="frame" x="8" y="0.0" width="287" height="245"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="MvY-Ag-4p9">
+                                                        <rect key="frame" x="0.0" y="0.0" width="287" height="245"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    </view>
+                                                    <blurEffect style="light"/>
+                                                </visualEffectView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66T-ws-v6v">
                                                     <rect key="frame" x="156" y="170" width="42" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -135,7 +141,7 @@
                                         <rect key="frame" x="0.0" y="328" width="295" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Chr-zo-ugq" id="2cA-eV-B9e">
-                                            <rect key="frame" x="0.0" y="0.0" width="295" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="295" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -145,6 +151,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="backgroundProfileImageView" destination="JUg-Vs-SFf" id="4oA-10-dtB"/>
+                        <outlet property="effectView" destination="bIf-l4-M60" id="UuR-Sw-VHs"/>
                         <outlet property="myListButton" destination="9Nv-ud-Vz8" id="jUz-uo-C8K"/>
                         <outlet property="myPageTableView" destination="CXy-Ck-0hg" id="j9X-Hx-uaS"/>
                         <outlet property="profileImgView" destination="pm6-d1-Fiv" id="a8M-o6-BOR"/>
@@ -157,12 +165,55 @@
             </objects>
             <point key="canvasLocation" x="1620" y="122.78860569715144"/>
         </scene>
+        <!--Edit My List View Controller-->
+        <scene sceneID="AWk-Zp-48k">
+            <objects>
+                <viewController id="8gO-CN-NWw" customClass="EditMyListViewController" customModule="WeatherSound" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hZ4-YY-NPq"/>
+                        <viewControllerLayoutGuide type="bottom" id="6Wd-Vv-fW4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2Fu-Xh-jkr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="neB-AZ-ohn">
+                                <rect key="frame" x="81" y="106" width="252" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.29041624069213867" green="0.56456547975540161" blue="0.88558632135391235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="16"/>
+                                <state key="normal" title="+ 새 리스트 만들기">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="addNewListBtnTouched:" destination="8gO-CN-NWw" eventType="touchUpInside" id="CXG-eD-QXD"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XGd-zj-K4G">
+                                <rect key="frame" x="43" y="205" width="342" height="531"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="addNewListBtn" destination="neB-AZ-ohn" id="j2X-p6-MgB"/>
+                        <outlet property="tableView" destination="XGd-zj-K4G" id="9zT-7C-ZMs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="id7-Rg-YuF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2405.7971014492755" y="121.46739130434784"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="mGJ-9a-wHf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ThE-Sh-Mb3" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="O0n-LN-6eE">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="O0n-LN-6eE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
@@ -177,4 +228,7 @@
             <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hotdog" width="317" height="313"/>
+    </resources>
 </document>
